# openhands-dynamic-agent-factor

./: .eslintrc.json  README.md  chat_history.md  dynamic-agent  index.js  jest.config.js  keyword_manager_state.json  mkdocs.yml  package-lock.json  package.json  pyproject.toml  setup.py  tsconfig.json
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  dependencies.yml  publish.yml  release.yml
coverage/: lcov.info
coverage/lcov-report/: index.html  tech_analyzer.ts.html  utils.ts.html
docs/: index.md
docs/api/: tech-analyzer.md
docs/getting-started/: installation.md  quick-start.md
examples/: basic_usage.py
openhands_dynamic_agent_factor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
openhands_dynamic_agent_factory/: __init__.py
openhands_dynamic_agent_factory/core/: __init__.py  agents.py  ci_integration.py  cli.py  css_framework_analyzer.py  css_frameworks_state.json  dashboard.py  dynamic_agent_factory.py  factory.py  framework_analyzer.py  framework_sources.py  keyword_manager.py  keyword_manager_state.json  tech_analyzer.py  templates.py  trigger_map.py  triggers.py  utils.py
openhands_dynamic_agent_factory/core/reports/: report_20250107_153310.html
openhands_dynamic_agent_factory/utils/: exceptions.py  result.py
src/: index.ts  setupTests.ts  tech_analyzer.ts  trigger_map.ts  utils.ts
src/__tests__/: tech_analyzer.test.ts
src/components/: Dashboard.tsx  Navigation.tsx
src/openhands_dynamic_agents/: __init__.py
src/openhands_dynamic_agents/core/: dynamic_agent.py  keyword_manager.py  llm_factory.py
src/openhands_dynamic_agents/templates/: __init__.py
src/openhands_dynamic_agents/utils/: monitoring.py  result.py  validation.py
