[build-system]
requires = ["setuptools>=45", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "openhands-dynamic-agent-factor"
version = "1.0.1"
description = "A powerful system for analyzing and generating technology-specific agents"
readme = "README.md"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
]
keywords = ["technology", "analysis", "agent", "framework", "stack"]
dependencies = [
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0",
    "typing-extensions>=4.0.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0",
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "pylint>=2.17.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/openhands-dynamic-agent-factor"
Documentation = "https://yourusername.github.io/openhands-dynamic-agent-factor"
Repository = "https://github.com/yourusername/openhands-dynamic-agent-factor.git"
"Bug Tracker" = "https://github.com/yourusername/openhands-dynamic-agent-factor/issues"

[project.scripts]
openhands = "openhands_dynamic_agent_factory.cli:main"

[tool.setuptools]
packages = ["openhands_dynamic_agent_factory"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
