[tool.poetry]
name = "openhands-dynamic-agents"
version = "0.1.0"
description = "Dynamic agent generation module for OpenHands"
authors = ["OpenHands Team <openhands@all-hands.dev>"]
readme = "README.md"
packages = [{include = "openhands_dynamic_agents", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
openhands = "^0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"